@@ -34,15 +34,6 @@ Warning: program
 Why:
  This option has been superseded by -tudeb.
 
-What: support of PGP
-Status: deprecated
-When: 1.15.x
-Warning: program
-Why:
- PGP is not part of Debian and GnuPG has been the standard tool for digital
- signatures for several years already. Supporting only GnuPG enables us to
- rely on some of its features.
-
 What: --print-installation-architecture (dpkg option)
 Status: obsolete
 When: 1.15.x
@@ -124,3 +115,12 @@ Why:
  Having two ways to let the administrator get to a shell on conffile prompt
  is confusing, it also difficults setting up a consistent environment to be
  used by external programs.
+
+What: support for PGP
+Status: removed
+When: 1.16.4
+Warning: program
+Why:
+ PGP is not part of Debian and GnuPG has been the standard tool for digital
+ signatures for several years already. Supporting only GnuPG enables us to
+ rely on some of its features.
