@@ -199,13 +199,11 @@ another make program (for example by using
 as \fIrules-file\fR).
 .TP
 .BI \-p sign-command
-When \fBdpkg\-buildpackage\fP needs to execute GPG or PGP to sign a source
+When \fBdpkg\-buildpackage\fP needs to execute GPG to sign a source
 control (\fB.dsc\fP) file or a \fB.changes\fP file it will run
 \fIsign-command\fP (searching the \fBPATH\fP if necessary) instead of
 \fBgpg\fP. \fIsign-command\fP will get all the arguments that
-\fBpgp\fP would have gotten. If \fIsign-command\fP
-takes its arguments in GPG rather than PGP style, you should give
-the \fB\-sgpg\fP option. \fIsign-command\fP
+\fBgpg\fP would have gotten. \fIsign-command\fP
 should not contain spaces or any other shell metacharacters.
 .TP
 .BI \-k key-id
