@@ -17,6 +17,8 @@ dpkg (1.16.4) UNRELEASED; urgency=low
     Closes: #671198
   * Do not mask PIE from dpkg-buildflags on m68k, it appears to work now.
     Requested by Thorsten Glaser <tg@mirbsd.de>.
+  * Remove deprecated support for PGP style signing command interface from
+    dpkg-buildpackage.
 
   [ Updated man page translations ]
   * German (Helge Kreutzmann).
